Did some large scale config refactoring, principal of which wassetting depths in a more manageable way.

--- a/data/config/Crosshairs.ini
+++ b/data/config/Crosshairs.ini
@@ -1,23 +1,25 @@
 [O-Crosshairs]
-Group             = effect
-Position          = (0, 0, 0)
-LifeTime          = 10.0
-; O-Crosshairs Class Data
-Speed             = 400
-DecelerationDistance  = 20.0
+Group = effect
+Position = @Commands.CalculatePosition
+LifeTime = 10.0
+;User-Defined
+Pos = (0, 0)
+Depth = O-Crosshairs
+Speed = 400
+DecelerationDistance = 20.0
 MaxMissileSpawnInterval = 1.0
 
 [G-Crosshairs]
-Pivot             = center
+Pivot = center
 
 [O-CrosshairsP1@O-Crosshairs]
-Graphic           = G-CrosshairsP1
+Graphic = G-CrosshairsP1
 
 [G-CrosshairsP1@G-Crosshairs]
-Texture           = SpaceShooterRedux/PNG/Lasers/laserBlue08.png
+Texture = SpaceShooterRedux/PNG/Lasers/laserBlue08.png
 
 [O-CrosshairsP2@O-Crosshairs]
-Graphic           = G-CrosshairsP2
+Graphic = G-CrosshairsP2
 
 [G-CrosshairsP2@G-Crosshairs]
-Texture           = SpaceShooterRedux/PNG/Lasers/laserRed08.png
+Texture = SpaceShooterRedux/PNG/Lasers/laserRed08.png
