--- a/data/config/Geometry.ini
+++ b/data/config/Geometry.ini
@@ -1,46 +1,53 @@
 [O-Walls]
-ChildList         = O-WallFloor # O-WallCeiling # O-WallLeftWall # O-WallRightWall
+ChildList = O-WallFloor # O-WallCeiling # O-WallLeftWall # O-WallRightWall
 ;O-ArenaBounds Class Data
 MaxElectrificationTime = 0.5
-MaxEmberTime           = 10.0
-EmberCreationRate      = 0.1
+MaxEmberTime = 10.0
+EmberCreationRate = 0.1
 
 [O-Wall]
-Group             = geometry
-Graphic           = G-Wall
-Body              = B-Wall
-ChildList         = O-ElectricityIconP1 # O-ElectricityIconP2
+Group = geometry
+Graphic = G-Wall
+Body = B-Wall
+Position = @Commands.CalculatePosition
+ChildList = O-ElectricityIconP1 # O-ElectricityIconP2
+;User-Defined
+Depth = O-Wall
 
 [G-Wall]
-Texture           = box.png
-Pivot             = center
+Texture = box.png
+Pivot = center
 
 [B-Wall]
-PartList          = BP-Wall
-Dynamic           = false
+PartList = BP-Wall
+Dynamic = false
 
 [BP-Wall]
-Type              = box
-Solid             = true
-SelfFlags         = geometry
-CheckMask         = projectileP1 # projectileP2 # pilotP1 # pilotP2 # ship
+Type = box
+Solid = true
+SelfFlags = geometry
+CheckMask = projectileP1 # projectileP2 # pilotP1 # pilotP2 # ship
 
 [O-WallFloor@O-Wall]
-Position          = (0, 532.5, 0)
-Scale             = (128, 1, 0)
-Repeat            = (128, 1, 0) ; For tiling. The Y-value is 1, so that the texture is not repeated vertically, and the X-value is 128, so the texture repeats 128 times horizontally.
+Scale = (128, 1, 0)
+Repeat = (128, 1, 0) ; For tiling. The Y-value is 1, so that the texture is not repeated vertically, and the X-value is 128, so the texture repeats 128 times horizontally.
+;User-Defined
+Pos = (0, 532.5)
 
 [O-WallCeiling@O-Wall]
-Position          = (0, -397.5, 0) ; Setting aside the top eighth of the screen for UI elements.
-Scale             = (128, 1, 0)
-Repeat            = (128, 1, 0) ; For tiling. The Y-value is 1, so that the texture is not repeated vertically, and the X-value is 128, so the texture repeats 128 times horizontally.
+Scale = (128, 1, 0)
+Repeat = (128, 1, 0) ; For tiling. The Y-value is 1, so that the texture is not repeated vertically, and the X-value is 128, so the texture repeats 128 times horizontally.
+;User-Defined
+Pos = (0, -397.5)
 
 [O-WallLeftWall@O-Wall]
-Position          = (-952.5, 67.5, 0)
-Scale             = (1, 63, 0)
-Repeat            = (1, 63, 0) ; For tiling. The Y-value is 1, so that the texture is not repeated vertically, and the Y-value is 63, so the texture repeats 63 times vertically.
+Scale = (1, 63, 0)
+Repeat = (1, 63, 0) ; For tiling. The Y-value is 1, so that the texture is not repeated vertically, and the Y-value is 63, so the texture repeats 63 times vertically.
+;User-Defined
+Pos = (-952.5, 67.5)
 
 [O-WallRightWall@O-Wall]
-Position          = (952.5, 67.5, 0)
-Scale             = (1, 63, 0)
-Repeat            = (1, 63, 0) ; For tiling. The Y-value is 1, so that the texture is not repeated vertically, and the Y-value is 63, so the texture repeats 63 times vertically.
+Scale = (1, 63, 0)
+Repeat = (1, 63, 0) ; For tiling. The Y-value is 1, so that the texture is not repeated vertically, and the Y-value is 63, so the texture repeats 63 times vertically.
+;User-Defined
+Pos = (952.5, 67.5)
