--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -19,136 +19,138 @@
 ; Main Settings
 
 [Resource]
-Texture         = ../data/texture
-Sound           = ../data/sound
+Texture = ../data/texture
+Sound = ../data/sound
 
 [Render]
-ShowProfiler      = false
+ShowProfiler = false
 
 [Display]
-ScreenWidth     = @MainCamera.FrustumWidth
-ScreenHeight    = @MainCamera.FrustumHeight
-Title             = Hexpatriates
-FullScreen        = true
-Smoothing         = true
-VSync             = true
+ScreenWidth = @MainCamera.FrustumWidth
+ScreenHeight = @MainCamera.FrustumHeight
+Title = Hexpatriates
+FullScreen = true
+Smoothing = true
+VSync = true
 
 [Physics]
-AllowSleep      = false
-Gravity         = (0.0, 25000.0, 0.0)
-;ShowDebug       = true
+AllowSleep = false
+Gravity = (0.0, 25000.0, 0.0)
+;ShowDebug = true
  
 [Input]
 SetList           = MainInput
  
 [MainInput]
 ; Keyboard Inputs
-KEY_ESCAPE        = PauseP1
-KEY_W             = UpP1
-KEY_A             = LeftP1
-KEY_S             = DownP1
-KEY_D             = RightP1
-KEY_SPACE         = DashP1
-KEY_LSHIFT        = ParryP1
-KEY_RIGHT         = NeutralP1
-KEY_UP            = UpwardP1
-KEY_DOWN          = DownwardP1
-KEY_LEFT          = SuperP1
+KEY_ESCAPE = PauseP1
+KEY_W = UpP1
+KEY_A = LeftP1
+KEY_S = DownP1
+KEY_D = RightP1
+KEY_SPACE = DashP1
+KEY_LSHIFT = ParryP1
+KEY_RIGHT = NeutralP1
+KEY_UP = UpwardP1
+KEY_DOWN = DownwardP1
+KEY_LEFT = SuperP1
 ; Gamepad Inputs
-JOY_START_1       = PauseP1
-JOY_UP_1          = UpP1
-JOY_LEFT_1        = LeftP1
-JOY_DOWN_1        = DownP1
-JOY_RIGHT_1       = RightP1
-JOY_LX_1          = LeftRightP1
-JOY_LY_1          = UpDownP1
-JOY_LBUMPER_1     = DashP1
-JOY_RBUMPER_1     = ParryP1
-JOY_X_1           = NeutralP1
-JOY_Y_1           = UpwardP1
-JOY_A_1           = DownwardP1
-JOY_B_1           = SuperP1
-JOY_START_2       = PauseP2
-JOY_UP_2          = UpP2
-JOY_LEFT_2        = LeftP2
-JOY_DOWN_2        = DownP2
-JOY_RIGHT_2       = RightP2
-JOY_LX_2          = LeftRightP2
-JOY_LY_2          = UpDownP2
-JOY_LBUMPER_2     = DashP2
-JOY_RBUMPER_2     = ParryP2
-JOY_X_2           = NeutralP2
-JOY_Y_2           = UpwardP2
-JOY_A_2           = DownwardP2
-JOY_B_2           = SuperP2
+JOY_START_1 = PauseP1
+JOY_UP_1 = UpP1
+JOY_LEFT_1 = LeftP1
+JOY_DOWN_1 = DownP1
+JOY_RIGHT_1 = RightP1
+JOY_LX_1 = LeftRightP1
+JOY_LY_1 = UpDownP1
+JOY_LBUMPER_1 = DashP1
+JOY_RBUMPER_1 = ParryP1
+JOY_X_1 = NeutralP1
+JOY_Y_1 = UpwardP1
+JOY_A_1 = DownwardP1
+JOY_B_1 = SuperP1
+JOY_START_2 = PauseP2
+JOY_UP_2 = UpP2
+JOY_LEFT_2 = LeftP2
+JOY_DOWN_2 = DownP2
+JOY_RIGHT_2 = RightP2
+JOY_LX_2 = LeftRightP2
+JOY_LY_2 = UpDownP2
+JOY_LBUMPER_2 = DashP2
+JOY_RBUMPER_2 = ParryP2
+JOY_X_2 = NeutralP2
+JOY_Y_2 = UpwardP2
+JOY_A_2 = DownwardP2
+JOY_B_2 = SuperP2
  
 [MainViewport]
-Camera            = MainCamera
+Camera = MainCamera
  
 [MainCamera]
-FrustumWidth      = 1920
-FrustumHeight     = 1080
-FrustumFar        = 2.0 ; Using 2.0 and -2.0 for FrustumFar and FrustumNear to give myself a substantial margin on either side when operating between 1.0 and -1.0.
-FrustumNear       = -2.0 ; Using 2.0 and -2.0 for FrustumFar and FrustumNear to give myself a substantial margin on either side when operating between 1.0 and -1.0.
-GroupList         = default # geometry # icon # projectileLarge # ship # pilot # projectileTethered # projectileMedium # projectileSmall # effect # ui
+FrustumWidth = 1920
+FrustumHeight = 1080
+FrustumFar = 2.0 ; Using 2.0 and -2.0 for FrustumFar and FrustumNear to give myself a substantial margin on either side when operating between 1.0 and -1.0.
+FrustumNear = -2.0 ; Using 2.0 and -2.0 for FrustumFar and FrustumNear to give myself a substantial margin on either side when operating between 1.0 and -1.0.
+GroupList = default # geometry # icon # projectileLarge # ship # pilot # projectileTethered # projectileMedium # projectileSmall # effect # ui
 
-;This section is purely for organization purposes, and is never referenced in code.
-[DrawOrder]
-RearToFront       = GEOMETRY #
-						O-Partition # 1 #
-						O-Wall # 0 #
-					ICON #
-						O-PilotSelectIcon # 1 #
-						O-ShipIcon # 1 # parentSpace #
-						O-PilotIcon # -1 # parentSpace #
-						O-ElectricityIcon # 0 #
-					PROJECTILELARGE #
-						O-MissileShield # 1 #
-						O-Explosion # 0 #
-					SHIP #
-						O-Ship # 0 #
-					PILOT #
-						O-Pilot # 0 #
-					PROJECTILETETHERED #
-						O-Beam # 1 #
-						O-Puppet # 0 #
-					PROJECTILEMEDIUM #
-						O-LaserWall # 1 #
-						O-Spacer # 0.5 #
-						O-Prism # 0 #
-					PROJECTILESMALL #
-						O-Shockwave # 1 #
-						O-Familiar # 0.9 #
-						O-Orb # 0.81 #
-						O-MedussaHead # 0.72 #
-						O-Grenade # 0.63 #
-						O-Missile # 0.54 #
-						O-Turret # 0.45 #
-						O-LaserGate # 0.36 #
-						O-Ember # 0.27 #
-						O-Laser # 0.18 #
-						O-LaserHeatseeking # 0.09 #
-						O-Shrapnel # 0 #
-					EFFECT #
-						O-Melee # 1 #
-						O-Parry # 0.66 #
-						O-LaserPortal # 0.33 #
-						O-Crosshairs # 0 #
-					UI #
-						O-Text # 1 #
-						O-Meter # 0.66 #
-						O-MeterBorder # 0.33 #
-						O-Fade # 0
+[Depths]
+;GEOMETRY
+	O-Partition = 1
+	O-Wall = 0
+;ICON #
+	O-PilotSelectIcon = 1
+	O-ShipIcon = 0.5
+	O-PilotIcon = -1
+	O-ElectricityIcon = 0
+;PROJECTILELARGE #
+	O-MissileShield = 1
+	O-Explosion = 0
+;SHIP #
+	O-Ship = 0
+;PILOT #
+	O-Pilot = 0
+;PROJECTILETETHERED #
+	O-Beam = 1
+	O-Puppet = 0
+;PROJECTILEMEDIUM #
+	O-LaserWall = 1
+	O-Spacer = 0.5
+	O-Prism = 0
+;PROJECTILESMALL #
+	O-Shockwave = 1
+	O-Familiar = 0.9
+	O-Orb = 0.81
+	O-MedussaHead = 0.72
+	O-Grenade = 0.63
+	O-Missile = 0.54
+	O-Turret = 0.45
+	O-LaserGate = 0.36
+	O-Ember = 0.27
+	O-Laser = 0.18
+	O-LaserHeatseeking = 0.09
+	O-Shrapnel = 0
+;EFFECT #
+	O-Melee = 1
+	O-Parry = 0.66
+	O-LaserPortal = 0.33
+	O-Crosshairs = 0
+;UI #
+	O-Text = -1
+	O-Meter = 0.66
+	O-MeterBorder = 0.33
+	O-Fade = 0
+	
+[Commands]
+CalculatePosition = % > @, > Get < Depth, > Get Depths <, > @, > Get < Pos, + < (0, 0, <)
 
 ; Joints
 
 [J-Weld]
-Type		= weld
-ParentAnchor	= (0, 0, 0)
+Type = weld
+ParentAnchor = (0, 0, 0)
 ChildAnchor	= (0, 0, 0)
-Collide		= false
+Collide	= false
 
 ; GUID Constants
 
 [GUID]
-Empty             = 00000000-0000-0000-0000-000000000000
+Empty = 00000000-0000-0000-0000-000000000000
