--- a/data/config/Icon.ini
+++ b/data/config/Icon.ini
@@ -1,134 +1,154 @@
 ; PILOT ICONS
 
 [O-PilotIcon]
-Group                = icon
-Position             = (0, 0, -1)
-UseParentSpace       = position
-IgnoreFromParent     = scale
+Group = icon
+Position = @Commands.CalculatePosition
+UseParentSpace = position
+IgnoreFromParent = scale
+;User-Defined
+Pos = (0, 0)
+Depth = O-PilotIcon
 
 [O-Pilot1IconP1@O-PilotIcon]
-Graphic              = G-Pilot1
-ChildList            = O-Ship1IconP1
+Graphic = G-Pilot1
+ChildList = O-Ship1IconP1
 
 [O-Pilot2IconP1@O-PilotIcon]
-Graphic              = G-Pilot2
-ChildList            = O-Ship2IconP1
+Graphic = G-Pilot2
+ChildList = O-Ship2IconP1
 
 [O-Pilot3IconP1@O-PilotIcon]
-Graphic              = G-Pilot3
-ChildList            = O-Ship3IconP1
+Graphic = G-Pilot3
+ChildList = O-Ship3IconP1
 
 [O-Pilot4IconP1@O-PilotIcon]
-Graphic              = G-Pilot4
-ChildList            = O-Ship4IconP1
+Graphic = G-Pilot4
+ChildList = O-Ship4IconP1
 
 [O-Pilot5IconP1@O-PilotIcon]
-Graphic              = G-Pilot5
-ChildList            = O-Ship5IconP1
+Graphic = G-Pilot5
+ChildList = O-Ship5IconP1
 
 [O-Pilot6IconP1@O-PilotIcon]
-Graphic              = G-Pilot6
-ChildList            = O-Ship6IconP1
+Graphic = G-Pilot6
+ChildList = O-Ship6IconP1
 
 [O-Pilot7IconP1@O-PilotIcon]
-Graphic              = G-Pilot7
-ChildList            = O-Ship7IconP1
+Graphic = G-Pilot7
+ChildList = O-Ship7IconP1
 
 [O-Pilot8IconP1@O-PilotIcon]
-Graphic              = G-Pilot8
-ChildList            = O-Ship8IconP1
+Graphic = G-Pilot8
+ChildList = O-Ship8IconP1
 
 [O-PilotSelectIcon@ScrollObject]
-Group          = icon
-Graphic        = G-PilotSelectIcon
-Scale          = (0.25, 0.25, 1)
+Group = icon
+Graphic = G-PilotSelectIcon
+Position = @Commands.CalculatePosition
+Scale = (0.25, 0.25, 1)
 UseParentSpace = both
+;User-Defined
+Depth = O-PilotSelectIcon
 
 [G-PilotSelectIcon]
-Texture        = SpaceShooterRedux/Backgrounds/black.png
-Pivot          = center
+Texture = SpaceShooterRedux/Backgrounds/black.png
+Pivot = center
 
 [O-PilotSelectIcon1@O-PilotSelectIcon]
-ShaderList     = SH-OutlineP1AndP2
-Position       = (-0.375, 0.125, -0.1)
-ChildList      = O-Pilot1IconP1
+ShaderList = SH-OutlineP1AndP2
+ChildList = O-Pilot1IconP1
+;User-Defined
+Pos = (-0.375, 0.125)
 
 [O-PilotSelectIcon2@O-PilotSelectIcon]
-Position       = (-0.125, 0.125, -0.1)
-ChildList      = O-Pilot2IconP1
+ChildList = O-Pilot2IconP1
+;User-Defined
+Pos = (-0.125, 0.125)
 
 [O-PilotSelectIcon3@O-PilotSelectIcon]
-Position       = (0.125, 0.125, -0.1)
-ChildList      = O-Pilot3IconP1
+ChildList = O-Pilot3IconP1
+;User-Defined
+Pos = (0.125, 0.125)
 
 [O-PilotSelectIcon4@O-PilotSelectIcon]
-Position       = (0.375, 0.125, -0.1)
-ChildList      = O-Pilot4IconP1
+ChildList = O-Pilot4IconP1
+;User-Defined
+Pos = (0.375, 0.125)
 
 [O-PilotSelectIcon5@O-PilotSelectIcon]
-Position       = (-0.375, 0.375, -0.1)
-ChildList      = O-Pilot5IconP1
+ChildList = O-Pilot5IconP1
+;User-Defined
+Pos = (-0.375, 0.375)
 
 [O-PilotSelectIcon6@O-PilotSelectIcon]
-Position       = (-0.125, 0.375, -0.1)
-ChildList      = O-Pilot6IconP1
+ChildList = O-Pilot6IconP1
+;User-Defined
+Pos = (-0.125, 0.375)
 
 [O-PilotSelectIcon7@O-PilotSelectIcon]
-Position       = (0.125, 0.375, -0.1)
-ChildList      = O-Pilot7IconP1
+ChildList = O-Pilot7IconP1
+;User-Defined
+Pos = (0.125, 0.375)
 
 [O-PilotSelectIcon8@O-PilotSelectIcon]
-Position       = (0.375, 0.375, -0.1)
-ChildList      = O-Pilot8IconP1
+ChildList = O-Pilot8IconP1
+;User-Defined
+Pos = (0.375, 0.375)
 
 ; SHIP ICONS
 
 [O-ShipIcon]
-Group                = icon
-Position             = (0, 0, 1)
-Rotation             = 90.0
-UseParentSpace       = position
-IgnoreFromParent     = scale
+Group = icon
+Position = @Commands.CalculatePosition
+Rotation = 90.0
+UseParentSpace = position
+IgnoreFromParent = scale
+;User-Defined
+Pos = (0, 0)
+Depth = O-ShipIcon
 
 [O-Ship1IconP1@O-ShipIcon]
-Graphic              = G-Ship1
+Graphic = G-Ship1
 
 [O-Ship2IconP1@O-ShipIcon]
-Graphic              = G-Ship2
+Graphic = G-Ship2
 
 [O-Ship3IconP1@O-ShipIcon]
-Graphic              = G-Ship3
+Graphic = G-Ship3
 
 [O-Ship4IconP1@O-ShipIcon]
-Graphic              = G-Ship4
+Graphic = G-Ship4
 
 [O-Ship5IconP1@O-ShipIcon]
-Graphic              = G-Ship5
+Graphic = G-Ship5
 
 [O-Ship6IconP1@O-ShipIcon]
-Graphic              = G-Ship6
+Graphic = G-Ship6
 
 [O-Ship7IconP1@O-ShipIcon]
-Graphic              = G-Ship7
+Graphic = G-Ship7
 
 [O-Ship8IconP1@O-ShipIcon]
-Graphic              = G-Ship8
+Graphic = G-Ship8
 
 [O-ElectricityIcon@ScrollObject]
-Group                = icon
-Position             = (0, 0, 0)
+Group = icon
+Position = @Commands.CalculatePosition
+;User-Defined
+Pos = (0, 0)
+Depth = O-ElectricityIcon
 
 [G-ElectricityIcon]
-Pivot                = center
+Pivot = center
 
 [O-ElectricityIconP1@O-ElectricityIcon]
-Graphic              = G-ElectricityIconP1
+Graphic = G-ElectricityIconP1
 
 [G-ElectricityIconP1@G-ElectricityIcon]
-Texture              = SpaceShooterRedux/PNG/Lasers/laserBlue11.png
+Texture = SpaceShooterRedux/PNG/Lasers/laserBlue11.png
 
 [O-ElectricityIconP2@O-ElectricityIcon]
-Graphic              = G-ElectricityIconP2
+Graphic = G-ElectricityIconP2
 
 [G-ElectricityIconP2@G-ElectricityIcon]
-Texture              = SpaceShooterRedux/PNG/Lasers/laserRed11.png
+Texture = SpaceShooterRedux/PNG/Lasers/laserRed11.png
