--- a/data/config/Partition.ini
+++ b/data/config/Partition.ini
@@ -1,20 +1,23 @@
 [O-Partition@ScrollObject]
-Group             = geometry
-Graphic           = G-Partition
-Position          = (0, 540, 1)
-Body              = B-Partition
-Scale             = (1.0, 16.5789473684, 1.0)
+Group = geometry
+Graphic = G-Partition
+Position = @Commands.CalculatePosition
+Body = B-Partition
+Scale = (1.0, 16.5789473684, 1.0)
+;User-Defined
+Pos = (0, 540)
+Depth = O-Partition
 
 [G-Partition]
-Texture           = SpaceShooterRedux/PNG/Lasers/laserGreen03.png
-Pivot             = bottom
+Texture = SpaceShooterRedux/PNG/Lasers/laserGreen03.png
+Pivot = bottom
 
 [B-Partition]
-PartList          = BP-Partition
-Dynamic           = false
+PartList = BP-Partition
+Dynamic = false
 
 [BP-Partition]
-Type              = box
-Solid             = false
-SelfFlags         = space
-CheckMask         = projectileP1 # projectileP2 # pilotP1 # pilotP2
+Type = box
+Solid = false
+SelfFlags = space
+CheckMask = projectileP1 # projectileP2 # pilotP1 # pilotP2
