--- a/data/config/UI.ini
+++ b/data/config/UI.ini
@@ -1,6 +1,9 @@
 [O-UI@ScrollObject]
-Group             = ui
-ParentCamera      = MainCamera ; Set MainCamera to be the parent of the UI element, thus binding them, and handling the latter in terms of camera space.
+Position = @Commands.CalculatePosition
+ParentCamera = MainCamera ; Set MainCamera to be the parent of the UI element, thus binding them, and handling the latter in terms of camera space.
 
 [O-Text@ScrollObject]
-Group             = ui
+Group = ui
+Position = @Commands.CalculatePosition
+;User-Defined
+Depth = O-Text
