--- a/data/config/LaserPortal.ini
+++ b/data/config/LaserPortal.ini
@@ -1,76 +1,79 @@
 [O-LaserPortal@ScrollObject]
-Group             = effect
-Position          = (0, 0, 0.33)
-LifeTime          = 5.0
+Group = effect
+Position = @Commands.CalculatePosition
+LifeTime = 5.0
+;User-Defined
+Pos = (0, 0)
+Depth = O-LaserPortal
 
 [G-LaserPortal]
-Pivot             = center
+Pivot = center
 
 [B-LaserPortal]
-Dynamic           = false
+Dynamic = false
 
 [BP-LaserPortal]
-Type              = sphere
-Solid             = false
+Type = sphere
+Solid = false
 
 [O-LaserPortalEntrance@O-LaserPortal]
 ;O-LaserPortalEntrance Class Data
-ExitDirection     = 0.0
+ExitDirection = 0.0
 
 [O-LaserPortalEntranceP1@O-LaserPortalEntrance]
-Graphic           = G-LaserPortalEntranceP1
-Body              = B-LaserPortalEntranceP1
+Graphic = G-LaserPortalEntranceP1
+Body = B-LaserPortalEntranceP1
 
 [G-LaserPortalEntranceP1@G-LaserPortal]
-Texture           = SpaceShooterRedux/PNG/Lasers/laserBlue08.png
+Texture = SpaceShooterRedux/PNG/Lasers/laserBlue08.png
 
 [B-LaserPortalEntranceP1@B-LaserPortal]
-PartList          = BP-LaserPortalEntranceP1
+PartList = BP-LaserPortalEntranceP1
 
 [BP-LaserPortalEntranceP1@BP-LaserPortal]
-SelfFlags         = space
-CheckMask         = projectileP1
+SelfFlags = space
+CheckMask = projectileP1
 
 [O-LaserPortalEntranceP2@O-LaserPortalEntrance]
-Graphic           = G-LaserPortalEntranceP2
-Body              = B-LaserPortalEntranceP2
+Graphic = G-LaserPortalEntranceP2
+Body = B-LaserPortalEntranceP2
 
 [G-LaserPortalEntranceP2@G-LaserPortal]
-Texture           = SpaceShooterRedux/PNG/Lasers/laserRed08.png
+Texture = SpaceShooterRedux/PNG/Lasers/laserRed08.png
 
 [B-LaserPortalEntranceP2@B-LaserPortal]
-PartList          = BP-LaserPortalEntranceP2
+PartList = BP-LaserPortalEntranceP2
 
 [BP-LaserPortalEntranceP2@BP-LaserPortal]
-SelfFlags         = space
-CheckMask         = projectileP2
+SelfFlags = space
+CheckMask = projectileP2
 
 [O-LaserPortalExitP1@O-LaserPortal]
-Graphic           = G-LaserPortalExitP1
-Body              = B-LaserPortalExitP1
+Graphic = G-LaserPortalExitP1
+Body = B-LaserPortalExitP1
 
 [G-LaserPortalExitP1@G-LaserPortal]
-Texture           = SpaceShooterRedux/PNG/Lasers/laserBlue09.png
+Texture = SpaceShooterRedux/PNG/Lasers/laserBlue09.png
 
 [B-LaserPortalExitP1@B-LaserPortal]
-PartList          = BP-LaserPortalExitP1
+PartList = BP-LaserPortalExitP1
 
 ;TODO: Probably don't need BPs for the exits
 [BP-LaserPortalExitP1@BP-LaserPortal]
-SelfFlags         = space
-CheckMask         = projectileP1
+SelfFlags = space
+CheckMask = projectileP1
 
 [O-LaserPortalExitP2@O-LaserPortal]
-Graphic           = G-LaserPortalExitP2
-Body              = B-LaserPortalExitP2
+Graphic = G-LaserPortalExitP2
+Body = B-LaserPortalExitP2
 
 [G-LaserPortalExitP2@G-LaserPortal]
-Texture           = SpaceShooterRedux/PNG/Lasers/laserRed09.png
+Texture = SpaceShooterRedux/PNG/Lasers/laserRed09.png
 
 [B-LaserPortalExitP2@B-LaserPortal]
-PartList          = BP-LaserPortalExitP2
+PartList = BP-LaserPortalExitP2
 
 ;TODO: Probably don't need BPs for the exits
 [BP-LaserPortalExitP2@BP-LaserPortal]
-SelfFlags         = space
-CheckMask         = projectileP2
+SelfFlags = space
+CheckMask = projectileP2
