--- a/data/config/Scene.ini
+++ b/data/config/Scene.ini
@@ -1,425 +1,458 @@
 [O-Scene]
-Pivot           = center
-Size            = (1920, 1080, 0.1)
-TrackList       = TT-StoreScene
+Pivot = center
+Size = (1920, 1080, 0.1)
+TrackList = TT-StoreScene
 
 ; PAUSE MENU
 
 [O-ScenePause@O-Scene]
-Graphic       = G-ScenePause
-Pausable      = false
-ChildList     = O-ContinueText # O-RestartMatchText # O-ExitText # O-QuitText
+Graphic = G-ScenePause
+Pausable = false
+ChildList = O-ContinueText # O-RestartMatchText # O-ExitText # O-QuitText
 
 [G-ScenePause]
-Texture       = SpaceShooterRedux/Backgrounds/darkPurple.png
+Texture = SpaceShooterRedux/Backgrounds/darkPurple.png
 
 [O-ScenePauseText@O-Text]
-Scale             = (5, 5, 1)
-UseParentSpace    = position
+Scale = (5, 5, 1)
+UseParentSpace = position
 
 [G-ScenePauseText]
-Pivot             = center
+Pivot = center
 
 [O-ContinueText@O-ScenePauseText]
-Graphic           = G-ContinueText
-Position          = (0, -0.375, 1)
-ShaderList        = SH-OutlineText
+Graphic = G-ContinueText
+ShaderList = SH-OutlineText
+;User-Defined
+Pos = (0, -0.375)
 
 [G-ContinueText@G-ScenePauseText]
-Text              = T-ContinueText
+Text = T-ContinueText
 
 [T-ContinueText]
-String            = Continue
+String = Continue
 
 [O-RestartMatchText@O-ScenePauseText]
-Graphic           = G-RestartMatchText
-Position          = (0, -0.125, 1)
+Graphic = G-RestartMatchText
+;User-Defined
+Pos = (0, -0.125)
 
 [G-RestartMatchText@G-ScenePauseText]
-Text              = T-RestartMatchText
+Text = T-RestartMatchText
 
 [T-RestartMatchText]
-String            = Restart Match
+String = Restart Match
 
 [O-ExitText@O-ScenePauseText]
-Graphic           = G-ExitText
-Position          = (0, 0.125, 1)
+Graphic = G-ExitText
+;User-Defined
+Pos = (0, 0.125)
 
 [G-ExitText@G-ScenePauseText]
-Text              = T-ExitText
+Text = T-ExitText
 
 [T-ExitText]
-String            = Exit to Main Menu
+String = Exit to Main Menu
 
 [O-QuitText@O-ScenePauseText]
-Graphic           = G-QuitText
-Position          = (0, 0.375, 1)
+Graphic = G-QuitText
+;User-Defined
+Pos = (0, 0.375)
 
 [G-QuitText@G-ScenePauseText]
-Text              = T-QuitText
+Text = T-QuitText
 
 [T-QuitText]
-String            = Quit to Desktop
+String = Quit to Desktop
 
 ; MAIN MENU
 
 [O-SceneMain@O-Scene]
-Graphic       = G-SceneMain
-ChildList     = O-ArcadeText # O-VersusText # O-OnlinePlayText # O-TrainingText # O-SettingsText
+Graphic = G-SceneMain
+ChildList = O-ArcadeText # O-VersusText # O-OnlinePlayText # O-TrainingText # O-SettingsText
 
 [G-SceneMain]
-Texture       = SpaceShooterRedux/Backgrounds/darkPurple.png
+Texture = SpaceShooterRedux/Backgrounds/darkPurple.png
 
 [O-SceneMainText@O-Text]
-Scale             = (5, 5, 1)
-UseParentSpace    = position
+Scale = (5, 5, 1)
+UseParentSpace = position
 
 [G-SceneMainText]
-Pivot             = left
+Pivot = left
 
 [O-ArcadeText@O-SceneMainText]
-Graphic           = G-ArcadeText
-Position          = (-0.45, 0.05, 1)
-ShaderList        = SH-OutlineText
+Graphic = G-ArcadeText
+ShaderList = SH-OutlineText
+;User-Defined
+Pos = (-0.45, 0.05)
 
 [G-ArcadeText@G-SceneMainText]
-Text              = T-ArcadeText
+Text = T-ArcadeText
 
 [T-ArcadeText]
-String            = Arcade
+String = Arcade
 
 [O-VersusText@O-SceneMainText]
-Graphic           = G-VersusText
-Position          = (-0.45, 0.15, 1)
+Graphic = G-VersusText
+;User-Defined
+Pos = (-0.45, 0.15)
 
 [G-VersusText@G-SceneMainText]
-Text              = T-VersusText
+Text = T-VersusText
 
 [T-VersusText]
-String            = VS
+String = VS
 
 [O-OnlinePlayText@O-SceneMainText]
-Graphic           = G-OnlinePlayText
-Position          = (-0.45, 0.25, 1)
+Graphic = G-OnlinePlayText
+;User-Defined
+Pos = (-0.45, 0.25)
 
 [G-OnlinePlayText@G-SceneMainText]
-Text              = T-OnlinePlayText
+Text = T-OnlinePlayText
 
 [T-OnlinePlayText]
-String            = Online Play
+String = Online Play
 
 [O-TrainingText@O-SceneMainText]
-Graphic           = G-TrainingText
-Position          = (-0.45, 0.35, 1)
+Graphic = G-TrainingText
+;User-Defined
+Pos = (-0.45, 0.35)
 
 [G-TrainingText@G-SceneMainText]
-Text              = T-TrainingText
+Text = T-TrainingText
 
 [T-TrainingText]
-String            = Training
+String = Training
 
 [O-SettingsText@O-SceneMainText]
-Graphic           = G-SettingsText
-Position          = (-0.45, 0.45, 1)
+Graphic = G-SettingsText
+;User-Defined
+Pos = (-0.45, 0.45)
 
 [G-SettingsText@G-SceneMainText]
-Text              = T-SettingsText
+Text = T-SettingsText
 
 [T-SettingsText]
-String            = Settings
+String = Settings
 
 ; PILOT SELECT MENU
 
 [O-ScenePilotSelect@O-Scene]
-Graphic       = G-ScenePilotSelect
-ChildList     = O-PilotSelectIcon1 # O-PilotSelectIcon2 # O-PilotSelectIcon3 # O-PilotSelectIcon4 # O-PilotSelectIcon5 # O-PilotSelectIcon6 # O-PilotSelectIcon7 # O-PilotSelectIcon8
+Graphic = G-ScenePilotSelect
+ChildList = O-PilotSelectIcon1 # O-PilotSelectIcon2 # O-PilotSelectIcon3 # O-PilotSelectIcon4 # O-PilotSelectIcon5 # O-PilotSelectIcon6 # O-PilotSelectIcon7 # O-PilotSelectIcon8
 
 [G-ScenePilotSelect]
-Texture       = SpaceShooterRedux/Backgrounds/purple.png
+Texture = SpaceShooterRedux/Backgrounds/purple.png
 
 ; ARENA
 
 [O-SceneArena@O-Scene]
-ChildList     = O-Walls # O-Partition # O-DashMeterP1 # O-ParryMeterP1 # O-LivesMeterP1 # O-NeutralMeterP1 # O-UpwardMeterP1 # O-DownwardMeterP1 # O-SuperMeterP1 # O-DashMeterP2 # O-ParryMeterP2 # O-LivesMeterP2 # O-NeutralMeterP2 # O-UpwardMeterP2 # O-DownwardMeterP2 # O-SuperMeterP2 # O-TimerText
+ChildList = O-Walls # O-Partition # O-DashMeterP1 # O-ParryMeterP1 # O-LivesMeterP1 # O-NeutralMeterP1 # O-UpwardMeterP1 # O-DownwardMeterP1 # O-SuperMeterP1 # O-DashMeterP2 # O-ParryMeterP2 # O-LivesMeterP2 # O-NeutralMeterP2 # O-UpwardMeterP2 # O-DownwardMeterP2 # O-SuperMeterP2 # O-TimerText
 ;Data
-PilotP1       = O-Pilot1P1
-PilotP2       = O-Pilot1P2
+PilotP1 = O-Pilot1P1
+PilotP2 = O-Pilot1P2
 
 [O-Meter@O-UI]
+Group = ui
+;User-Defined
+Depth = O-Meter
 
 [O-DashMeter@O-Meter]
-Scale             = (0.072, 0.0375, 1.0)
+Scale = (0.072, 0.0375, 1.0)
 
 [G-DashMeter]
-Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
+Texture = SpaceShooterRedux/PNG/UI/buttonBlue.png
 
 [O-DashMeterP1@O-DashMeter]
-Graphic           = G-DashMeterP1
-Position          = (-0.05, -0.475, 0.66)
+Graphic = G-DashMeterP1
+;User-Defined
+Pos = (-0.05, -0.475)
 
 [G-DashMeterP1@G-DashMeter]
-Pivot             = right
+Pivot = right
 
 [O-DashMeterP2@O-DashMeter]
-Graphic           = G-DashMeterP2
-Position          = (0.05, -0.475, 0.66)
+Graphic = G-DashMeterP2
+;User-Defined
+Pos = (0.05, -0.475)
 
 [G-DashMeterP2@G-DashMeter]
-Pivot             = left
+Pivot = left
 
 [O-ParryMeter@O-Meter]
-Scale             = (0.072, 0.0375, 1.0)
+Scale = (0.072, 0.0375, 1.0)
 
 [G-ParryMeter]
-Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
+Texture = SpaceShooterRedux/PNG/UI/buttonBlue.png
 
 [O-ParryMeterP1@O-ParryMeter]
-Graphic           = G-ParryMeterP1
-Position          = (-0.1445, -0.475, 0.66)
+Graphic = G-ParryMeterP1
+;User-Defined
+Pos = (-0.1445, -0.475)
 
 [G-ParryMeterP1@G-ParryMeter]
-Pivot             = right
+Pivot = right
 
 [O-ParryMeterP2@O-ParryMeter]
-Graphic           = G-ParryMeterP2
-Position          = (0.1445, -0.475, 0.66)
+Graphic = G-ParryMeterP2
+;User-Defined
+Pos = (0.1445, -0.475)
 
 [G-ParryMeterP2@G-ParryMeter]
-Pivot             = left
+Pivot = left
 
 [O-LivesMeter@O-Meter]
-Scale             = (0.072, 0.025, 1.0)
+Scale = (0.072, 0.025, 1.0)
 
 [G-LivesMeter]
-Texture           = SpaceShooterRedux/PNG/UI/buttonRed.png
+Texture = SpaceShooterRedux/PNG/UI/buttonRed.png
 
 [O-LivesMeterP1@O-LivesMeter]
-Graphic           = G-LivesMeterP1
-Position          = (-0.05, -0.39375, 0.66)
+Graphic = G-LivesMeterP1
+;User-Defined
+Pos = (-0.05, -0.39375)
 
 [G-LivesMeterP1@G-LivesMeter]
-Pivot             = right
+Pivot = right
 
 [O-LivesMeterP2@O-LivesMeter]
-Graphic           = G-LivesMeterP2
-Position          = (0.05, -0.39375, 0.66)
+Graphic = G-LivesMeterP2
+;User-Defined
+Pos = (0.05, -0.39375)
 
 [G-LivesMeterP2@G-LivesMeter]
-Pivot             = left
+Pivot = left
 
 [O-NeutralMeter@O-Meter]
-Scale             = (0.072, 0.0375, 1.0)
+Scale = (0.072, 0.0375, 1.0)
 
 [G-NeutralMeter]
-Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
+Texture = SpaceShooterRedux/PNG/UI/buttonBlue.png
 
 [O-NeutralMeterP1@O-NeutralMeter]
-Graphic           = G-NeutralMeterP1
-Position          = (-0.239, -0.475, 0.66)
+Graphic = G-NeutralMeterP1
+;User-Defined
+Pos = (-0.239, -0.475)
 
 [G-NeutralMeterP1@G-NeutralMeter]
-Pivot             = right
+Pivot = right
 
 [O-NeutralMeterP2@O-NeutralMeter]
-Graphic           = G-NeutralMeterP2
-Position          = (0.239, -0.475, 0.66)
+Graphic = G-NeutralMeterP2
+;User-Defined
+Pos = (0.239, -0.475)
 
 [G-NeutralMeterP2@G-NeutralMeter]
-Pivot             = left
+Pivot = left
 
 [O-UpwardMeter@O-Meter]
-Scale             = (0.072, 0.0375, 1.0)
+Scale = (0.072, 0.0375, 1.0)
 
 [G-UpwardMeter]
-Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
+Texture = SpaceShooterRedux/PNG/UI/buttonBlue.png
 
 [O-UpwardMeterP1@O-UpwardMeter]
-Graphic           = G-UpwardMeterP1
-Position          = (-0.3335, -0.475, 0.66)
+Graphic = G-UpwardMeterP1
+;User-Defined
+Pos = (-0.3335, -0.475)
 
 [G-UpwardMeterP1@G-UpwardMeter]
-Pivot             = right
+Pivot = right
 
 [O-UpwardMeterP2@O-UpwardMeter]
-Graphic           = G-UpwardMeterP2
-Position          = (0.3335, -0.475, 0.66)
+Graphic = G-UpwardMeterP2
+;User-Defined
+Pos = (0.3335, -0.475)
 
 [G-UpwardMeterP2@G-UpwardMeter]
-Pivot             = left
+Pivot = left
 
 [O-DownwardMeter@O-Meter]
-Scale             = (0.072, 0.0375, 1.0)
+Scale = (0.072, 0.0375, 1.0)
 
 [G-DownwardMeter]
-Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
+Texture = SpaceShooterRedux/PNG/UI/buttonBlue.png
 
 [O-DownwardMeterP1@O-DownwardMeter]
-Graphic           = G-DownwardMeterP1
-Position          = (-0.428, -0.475, 0.66)
+Graphic = G-DownwardMeterP1
+;User-Defined
+Pos = (-0.428, -0.475)
 
 [G-DownwardMeterP1@G-DownwardMeter]
-Pivot             = right
+Pivot = right
 
 [O-DownwardMeterP2@O-DownwardMeter]
-Graphic           = G-DownwardMeterP2
-Position          = (0.428, -0.475, 0.66)
+Graphic = G-DownwardMeterP2
+;User-Defined
+Pos = (0.428, -0.475)
 
 [G-DownwardMeterP2@G-DownwardMeter]
-Pivot             = left
+Pivot = left
 
 [O-SuperMeter@O-Meter]
-Scale             = (0.45, 0.0375, 1.0)
+Scale = (0.45, 0.0375, 1.0)
 
 [G-SuperMeter]
-Texture           = SpaceShooterRedux/PNG/UI/buttonYellow.png
+Texture = SpaceShooterRedux/PNG/UI/buttonYellow.png
 
 [O-SuperMeterP1@O-SuperMeter]
-Graphic           = G-SuperMeterP1
-Position          = (-0.05, -0.43125, 0.66)
+Graphic = G-SuperMeterP1
+;User-Defined
+Pos = (-0.05, -0.43125)
 
 [G-SuperMeterP1@G-SuperMeter]
-Pivot             = right
+Pivot = right
 
 [O-SuperMeterP2@O-SuperMeter]
-Graphic           = G-SuperMeterP2
-Position          = (0.05, -0.43125, 0.66)
+Graphic = G-SuperMeterP2
+;User-Defined
+Pos = (0.05, -0.43125)
 
 [G-SuperMeterP2@G-SuperMeter]
-Pivot             = left
+Pivot = left
 
 [O-MeterBorder@O-UI]
-Position          = (0, 0, 0.33)
+Group = ui
+;User-Defined
+Pos = (0, 0)
+Depth = O-MeterBorder
 
 [O-ClipBorder@O-MeterBorder]
-Graphic           = G-ClipBorder
-Scale             = (0.002, 0.0375, 1.0)
+Graphic = G-ClipBorder
+Scale = (0.002, 0.0375, 1.0)
 
 [G-ClipBorder]
-Texture           = SpaceShooterRedux/PNG/UI/buttonRed.png
-Pivot             = center
-Color             = (255, 0, 0)
+Texture = SpaceShooterRedux/PNG/UI/buttonRed.png
+Pivot = center
+Color = (255, 0, 0)
 
 [O-ClipBorderTop@O-ClipBorder]
-Scale             = (0.072, 0.002, 1.0)
-Pivot             = top
+Scale = (0.072, 0.002, 1.0)
+Pivot = top
 
 [O-ClipBorderLeft@O-ClipBorder]
-Pivot             = left
+Pivot = left
 
 [O-ClipBorderBottom@O-ClipBorder]
-Scale             = @O-ClipBorderTop.Scale
-Pivot             = bottom
+Scale = @O-ClipBorderTop.Scale
+Pivot = bottom
 
 [O-ClipBorderRight@O-ClipBorder]
-Pivot             = right
+Pivot = right
 
 [O-TimerText@O-Text]
-Graphic           = G-TimerText
-Position          = (0, -0.4375, 1)
-Scale             = (0.08, 0.08, 0.08)
+Graphic = G-TimerText
+Scale = (0.08, 0.08, 0.08)
+;User-Defined
+Pos = (0, -0.4375)
 
 [G-TimerText]
-Text              = T-TimerText
-Pivot             = center
+Text = T-TimerText
+Pivot = center
 
 [T-TimerText]
-String            = 90
+String = 90
 
 ; TRANSITIONS
 
 [O-ToScene]
-LifeTime        = track
-TrackList       = @
+LifeTime = track
+TrackList = @
 
 [O-ToScenePause@O-ToScene]
-0               = >> Get Runtime Scene, Set Runtime PreviousScene <, Object.SetPosition < (0, 0, 100) #
-				  > Object.Create O-ScenePause, > Get Runtime PreviousScene, Object.SetOwner < <
+0 = >> Get Runtime Scene, Set Runtime PreviousScene <, Object.SetPosition < (0, 0, 100) #
+	> Object.Create O-ScenePause, > Get Runtime PreviousScene, Object.SetOwner < <
 
 [O-ToSceneMain@O-ToScene]
-0               = > Get Runtime Scene, Object.Delete <, Object.Create O-SceneMain
+0 = > Get Runtime Scene, Object.Delete <, Object.Create O-SceneMain
 
 [O-ToScenePilotSelect@O-ToScene]
-0               = > Get Runtime Scene, Object.Delete <, Object.Create O-ScenePilotSelect
+0 = > Get Runtime Scene, Object.Delete <, Object.Create O-ScenePilotSelect
 
 [O-ToSceneArena@O-ToScene]
-0               = > Get Runtime Scene, Object.Delete <, Object.Create O-SceneArena
+0 = > Get Runtime Scene, Object.Delete <, Object.Create O-SceneArena
 
 [O-ToSceneArenaFromPause@O-ToScene]
-0               = > Get GUID Empty, >> Get Runtime PreviousScene, Object.SetPosition < (0, 0, 0), Object.SetOwner < < #
-                  > Get Runtime Scene, Object.Delete < #
-				  >> Get Runtime PreviousScene, Object.RemoveTrack < TT-StoreScene, Object.AddTrack < TT-StoreScene
+0 = > Get GUID Empty, >> Get Runtime PreviousScene, Object.SetPosition < (0, 0, 0), Object.SetOwner < < #
+    > Get Runtime Scene, Object.Delete < #
+	>> Get Runtime PreviousScene, Object.RemoveTrack < TT-StoreScene, Object.AddTrack < TT-StoreScene
 
 ;[O-ToSceneMain@O-ToScene]
-;0               = > Get Runtime Scene, Object.Delete <, Object.Create O-SceneMain
+;0 = > Get Runtime Scene, Object.Delete <, Object.Create O-SceneMain
 
 ;[O-ToScenePilotSelect@O-ToScene]
-;0               = > Get Runtime Scene, Object.AddTrack < TT-MoveOut, > Object.Create O-ScenePilotSelect, Object.AddTrack < TT-MoveIn
+;0 = > Get Runtime Scene, Object.AddTrack < TT-MoveOut, > Object.Create O-ScenePilotSelect, Object.AddTrack < TT-MoveIn
 
 ;[O-ToSceneArena@O-ToScene]
-;0               = Object.Create Fade
-;0.5             = > Get Runtime Scene, Object.Delete <, > Object.Create O-SceneArena
+;0 = Object.Create Fade
+;0.5 = > Get Runtime Scene, Object.Delete <, > Object.Create O-SceneArena
 
 [O-Fade]
-Group           = ui
-LifeTime        = fx
-ParentCamera    = MainCamera
-Scale           = 1
-Position        = (0, 0, 0)
-Pivot           = center
-Graphic         = @
-Texture         = pixel
-Color           = (0, 0, 0)
-Alpha           = 0
-FXList          = @
-SlotList        = FXS-FadeIn # FXS-FadeOut
+Group = ui
+Position = @Commands.CalculatePosition
+LifeTime = fx
+ParentCamera = MainCamera
+Scale = 1
+Pivot = center
+Graphic = @
+Texture = pixel
+Color = (0, 0, 0)
+Alpha = 0
+FXList = @
+SlotList = FXS-FadeIn # FXS-FadeOut
+;User-Defined
+Pos = (0, 0)
+Depth = O-Fade
 
 [O-ToSceneCyan@O-ToScene]
-0               = > Get Runtime Scene, Object.AddTrack < TT-SpiralOut, > Object.Create O-ScenePilotSelect, Object.AddTrack < TT-SpiralIn
+0 = > Get Runtime Scene, Object.AddTrack < TT-SpiralOut, > Object.Create O-ScenePilotSelect, Object.AddTrack < TT-SpiralIn
 
 [O-ToSceneBlue@O-ToScene]
-0               = >> Get Runtime Scene, Set Runtime Out <, Object.SetPosition < (0, 0, 200) #
-                  >  Object.Create O-ScenePilotSelect, Object.SetPosition < (0, 0, 100) #
-                  >  Viewport.Get MainViewport, Viewport.Delete <, Viewport.Create V-ViewportIn, Viewport.Create V-ViewportOut, Viewport.Create MainViewport #
-                  >  Object.Create O-SceneDissolve, Object.SetOwner < ^
-0.8             = >  Viewport.Get V-ViewportIn, Viewport.Delete <, > Viewport.Get V-ViewportOut, Viewport.Delete < #
-                  >  Get Runtime Out, Object.Delete <, > Get Runtime Scene, Object.SetPosition < (0, 0, 0)
+0 = >> Get Runtime Scene, Set Runtime Out <, Object.SetPosition < (0, 0, 200) #
+    >  Object.Create O-ScenePilotSelect, Object.SetPosition < (0, 0, 100) #
+    >  Viewport.Get MainViewport, Viewport.Delete <, Viewport.Create V-ViewportIn, Viewport.Create V-ViewportOut, Viewport.Create MainViewport #
+    >  Object.Create O-SceneDissolve, Object.SetOwner < ^
+0.8 = >  Viewport.Get V-ViewportIn, Viewport.Delete <, > Viewport.Get V-ViewportOut, Viewport.Delete < #
+      >  Get Runtime Out, Object.Delete <, > Get Runtime Scene, Object.SetPosition < (0, 0, 0)
 
 [O-SceneDissolve]
-Graphic         = @
-Texture         = pixel
-Pivot           = center
-ParentCamera    = MainCamera
-UseParentSpace  = both
-Scale           = 1
-ShaderList      = @
-Code            = "
+Graphic = @
+Texture = pixel
+Pivot = center
+ParentCamera = MainCamera
+UseParentSpace = both
+Scale = 1
+ShaderList = @
+Code = "
 float random(vec2 v)
 {
   return fract(sin(dot(v.xy, vec2(12.9898, 78.233))) * 43758.5453);
 }
 void main()
 {
-  vec2 coord    = vec2(gl_FragCoord.x / res.x, 1.0 - gl_FragCoord.y / res.y);
-  gl_FragColor  = mix(texture2D(tex_out, coord), texture2D(tex_in, coord), step(random(coord), time / 0.8f));
+  vec2 coord = vec2(gl_FragCoord.x / res.x, 1.0 - gl_FragCoord.y / res.y);
+  gl_FragColor = mix(texture2D(tex_out, coord), texture2D(tex_in, coord), step(random(coord), time / 0.8f));
 }
 "
-UseCustomParam  = true
-ParamList       = tex_in # tex_out # time # res
-tex_in          = TextureIn
-tex_out         = TextureOut
-res             = % Get Display FramebufferSize
-time            = time
+UseCustomParam = true
+ParamList = tex_in # tex_out # time # res
+tex_in = TextureIn
+tex_out = TextureOut
+res = % Get Display FramebufferSize
+time = time
 
 [V-ViewportIn]
-Camera          = CA-CameraIn
-TextureList     = TextureIn
+Camera = CA-CameraIn
+TextureList = TextureIn
 
 [CA-CameraIn@MainCamera]
-Position        = (0, 0, 100)
+Position = (0, 0, 100)
 
 [V-ViewportOut]
-Camera          = CA-CameraOut
-TextureList     = TextureOut
+Camera = CA-CameraOut
+TextureList = TextureOut
 
 [CA-CameraOut@MainCamera]
-Position        = (0, 0, 200)
+Position = (0, 0, 200)
